$Id$

Summary of Changes for Duro

Changes for Duro 0.10

- Added IF operator.

- Dropped catalog table SYS_POSSREPS.

- Implemented RDB_multi_assign().

- Durotcl uses Tutorial D syntax to represent values of user-defined
  types. The comparison operator is passed the actual representation.

- Read-only operators can access the current transaction if called from Tcl.

- Now supporting general relation-valued expressions.

- Now supporting a user-defined comparison operator for user-defined types.

- Type constraints are now specified outside of possible representations.

- Fixed problem with error dialogs in Durotcl.

- Implemented RDB_create_constraint() and RDB_drop_constraint().

- A call failing for a system error no longer always results in
  an implicit rollback.

- Bugfixes.

- Single quotes are now supported in addition to double quotes
  as delimiters in string literals.

Changes for Duro 0.9

- Documented utilities in utils.html.

- Switched to Berkeley DB 4.3.

- Added dump utility Durodump.

- Added help menu and version information to Duroadmin.

- Added B-tree indexes.

- RDB_set_table_name() now works for global tables.

- Replaced RDB_user_op() by RDB_ro_op() and RDB_ro_op_va().

- Dropped RDB_neq() etc., replaced by RDB_ro_op() and RDB_ro_op_va().

- Added transaction argument to RDB_select(), RDB_extend(), and
  RDB_summarize().

- Added built-in operators LENGTH, SUBSTRING, IS_EMPTY, COUNT, and SUBSET_OF.

- Added conversion operators, arithmetical operators, etc., as built-in
  operators.

- Durotcl now supports creating tables with user-defined types.

- Implemented duro::table rename and duro::table def.

- Changed duro::table attrs.

- Changed argument order of duro::db to conform with duro::begin.

- Expressions now support backslash escaping in strings.

- Changed expression grammar so that expressions like A UNION B UNION C
  are now possible.

- Minor change to RDB_expression struct.
